--- a/importkit/yaml/tests/testdata/test_dict_import.yml
+++ b/importkit/yaml/tests/testdata/test_dict_import.yml
@@ -6,7 +6,7 @@
 ##
 
 
-%SCHEMA semantix.lang.yaml.tests.test_import.DictImportSchema
+%SCHEMA semantix.utils.lang.yaml.tests.test_import.DictImportSchema
 ---
 attr1: test
 attr2: 1
