yaml validator: Add support for unique constraints
This makes it possible to restrict a field in the record to be unique
across the whole list, so that the validation of:

    - key: value
      key1: value1

    - key: value
      key1: value2

will fail if 'key' has 'unique' set to True in schema.

Add some more test goodness.

--- a/importkit/yaml/validator/tests/ymls/person.yml
+++ b/importkit/yaml/validator/tests/ymls/person.yml
@@ -6,7 +6,14 @@ sequence:
             "name":
                 type: str
                 length: { min: 2, max-ex: 20 }
+                required: yes
+                unique: yes
 
             "phone":
                 type: str
                 pattern: ^\d{3}-\d{3}-\d{4}$
+
+            "sex":
+                type: str
+                enum: [male, female]
+                default: male
