--- a/importkit/yaml/validator/tests/ymls/choice.yml
+++ b/importkit/yaml/validator/tests/ymls/choice.yml
@@ -1,3 +1,4 @@
+&TST
 type: map
 mapping:
     "constraints":
@@ -25,3 +26,5 @@ mapping:
                       mapping:
                         "regexp":
                             type: str
+
+                    - *TST
