yaml validator: Allow empty values in maps
'item: <nothing>' is a valid YAML construct and the resulting None value
must be validated as well.  This also allows empty maps to be populated
with defaults properly.

Add some map tests while at it.

--- a/importkit/yaml/validator/tests/ymls/types.yml
+++ b/importkit/yaml/validator/tests/ymls/types.yml
@@ -7,3 +7,12 @@ mapping:
     any: { type: any }
     str: { type: str }
     bool: { type: bool }
+    dict:
+        type: map
+        mapping:
+            test1:
+                type: int
+                default: 3
+            test2:
+                type: str
+                default: "a"
