yml validator: Add support for min/max length checks for mappings
Make it possible to constrain arbitrary-length mapping length.  Example:

    fdict:
        type: map
        min-length: 2
        max-length: 3
        mapping:
            =:
              type: str

will not allow the number of elements in any fdict to be less than 2 or more than 3.

--- a/importkit/yaml/validator/tests/ymls/types.yml
+++ b/importkit/yaml/validator/tests/ymls/types.yml
@@ -16,3 +16,11 @@ mapping:
             test2:
                 type: str
                 default: "a"
+
+    fdict:
+        type: map
+        min-length: 2
+        max-length: 3
+        mapping:
+            =:
+                type: str
