Rework YAML format and validation
Increase YAML integration by placing validation inside the YAML
processing pipeline after the composition step.  The validator now
works on the node tree instead of flattened data which gives much more
flexibility and, more importantly, provides access to YAML context.

Another feature of this integration: document SCHEMA and document NAME
are now specified uniformly via custom directives.  This also makes
it possible to support multidocument YAML files.

--- a/importkit/yaml/validator/tests/ymls/types.yml
+++ b/importkit/yaml/validator/tests/ymls/types.yml
@@ -24,3 +24,7 @@ mapping:
         mapping:
             =:
                 type: str
+
+    minmax:
+        type: int
+        range: {min: 3, max-ex: 20}
