utils.lang.yaml.validator: Properly cast and validate default values
When a value comes from a default specified in the schema, it must be
put through a check() too.

--- a/importkit/yaml/validator/tests/ymls/object.yml
+++ b/importkit/yaml/validator/tests/ymls/object.yml
@@ -19,6 +19,15 @@ mapping:
                 type: str
                 default: "<empty>"
 
+    properdefault:
+        type: map
+        object: semantix.utils.lang.yaml.validator.tests.test_object.ScalarContainer
+        mapping:
+            scalar:
+                type: str
+                object: semantix.utils.lang.yaml.validator.tests.test_object.Scalar
+                default: 'default scalar'
+
     fail:
         type: map
         object: semantix.utils.lang.yaml.validator.tests.test_object.Bad
