utils.lang.yaml: Add support for ordered mappings
It is now possible to instruct the loader to construct OrderedDict-s by
setting the "ordered" attribute of the mapping in the schema to True.

--- a/importkit/yaml/validator/tests/ymls/types.yml
+++ b/importkit/yaml/validator/tests/ymls/types.yml
@@ -36,3 +36,10 @@ mapping:
     minmax:
         type: int
         range: {min: 3, max-ex: 20}
+
+    odict:
+        type: map
+        ordered: true
+        mapping:
+            =:
+                type: int
