Semantix becomes Metamagic
Semantix was always a working name that happened to stick around and
nobody really likes it.  Metamagic seems like a better name for this stuff
:-)

--- a/importkit/yaml/tests/testdata/test_module_import_bad2.yml
+++ b/importkit/yaml/tests/testdata/test_module_import_bad2.yml
@@ -15,7 +15,7 @@ attr3: 4
 ...
 
 
-%SCHEMA semantix.utils.lang.yaml.tests.testdata.test_module_import_schema.ModuleImportSchema
+%SCHEMA metamagic.utils.lang.yaml.tests.testdata.test_module_import_schema.ModuleImportSchema
 ---
 attr1: test
 attr2: 1
