--- a/importkit/yaml/tests/testdata/test_module_import_bad1.yml
+++ b/importkit/yaml/tests/testdata/test_module_import_bad1.yml
@@ -6,7 +6,7 @@
 ##
 
 
-%SCHEMA semantix.utils.lang.yaml.tests.testdata.test_module_import_schema.ModuleImportSchema
+%SCHEMA metamagic.utils.lang.yaml.tests.testdata.test_module_import_schema.ModuleImportSchema
 ---
 attr1: test
 attr2: 1
