--- a/importkit/yaml/validator/tests/ymls/object.yml
+++ b/importkit/yaml/validator/tests/ymls/object.yml
@@ -6,7 +6,7 @@
 ##
 
 
-%SCHEMA semantix.utils.lang.yaml.schema.Schema
+%SCHEMA metamagic.utils.lang.yaml.schema.Schema
 %NAME Schema
 ---
 
@@ -14,7 +14,7 @@ type: map
 mapping:
     test1:
         type: map
-        object: semantix.utils.lang.yaml.validator.tests.test_object.A
+        object: metamagic.utils.lang.yaml.validator.tests.test_object.A
         mapping:
             name:
                 type: str
@@ -25,16 +25,16 @@ mapping:
 
     properdefault:
         type: map
-        object: semantix.utils.lang.yaml.validator.tests.test_object.ScalarContainer
+        object: metamagic.utils.lang.yaml.validator.tests.test_object.ScalarContainer
         mapping:
             scalar:
                 type: str
-                object: semantix.utils.lang.yaml.validator.tests.test_object.Scalar
+                object: metamagic.utils.lang.yaml.validator.tests.test_object.Scalar
                 default: 'default scalar'
 
     fail:
         type: map
-        object: semantix.utils.lang.yaml.validator.tests.test_object.Bad
+        object: metamagic.utils.lang.yaml.validator.tests.test_object.Bad
         mapping:
             name:
                 type: str
@@ -42,7 +42,7 @@ mapping:
 
     customvalidation:
         type: map
-        object: semantix.utils.lang.yaml.validator.tests.test_object.CustomValidator
+        object: metamagic.utils.lang.yaml.validator.tests.test_object.CustomValidator
         mapping:
             name:
                 type: str
