Remove dependency on Metamagic

--- a/importkit/yaml/tests/testdata/test_modclass_tag.yml
+++ b/importkit/yaml/tests/testdata/test_modclass_tag.yml
@@ -6,7 +6,7 @@
 ##
 
 
-!module metamagic.utils.lang.yaml.tests.testdata.modclass.CustomModuleClass
+!module importkit.yaml.tests.testdata.modclass.CustomModuleClass
 ...
 
 
