--- a/importkit/yaml/tests/testdata/ambig.yml
+++ b/importkit/yaml/tests/testdata/ambig.yml
@@ -6,7 +6,7 @@
 ##
 
 
-%SCHEMA metamagic.utils.lang.yaml.tests.testdata.ambig_schema.AmbigSchema
+%SCHEMA importkit.yaml.tests.testdata.ambig_schema.AmbigSchema
 %NAME test
 ---
 aaa: bbb
